[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tgbot-collector"
version = "1.0.0"
description = "Production-grade Telegram bot for automated data collection and publishing"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "structlog>=24.2",
    "tenacity>=8.3",
    "xxhash>=3.4",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "factory-boy>=3.3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
tgbot = "src.main:cli"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "migrations/*"]
